--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
                         <div class="features-icon">
                             <h2>01</h2>
                             <img src="assets/images/features-icon-3.png" alt="">
-                            <h4>Marketing Opportunity</h4>
-                            <p>The show will give digital artists and NFT curators the opportunity to showcase their collections, adding a unqiue value to each piece..
+                            <h4>NFTs IRL</h4>
+                            <p>Bringing the digital back into the physical world, this gallery event is an opportunity to reflect on the transiency of media. 
+                                Every collection participating in the show will gain a unique story to the pieces.
                             </p>
 
                         </div>
@@ -109,9 +110,8 @@
                             <h2>02</h2>
                             <img src="assets/images/features-icon-2.png" alt="">
                             <h4>Central Location</h4>
-                            <p>The gallery will be hosted at a central location on the island on Manhattan.
+                            <p>The show will be hosted at a gallery on the island on Manhattan.
                                 The show will leverage the rich arts culture of NYC to elevate NFT art on a broader stage.
-
                             </p>
 
                         </div>
@@ -125,7 +125,8 @@
                         <h2>03</h2>
                         <img src="assets/images/features-icon-1.png" alt="">
                         <h4>Direct Access</h4>
-                        <p>Each piece will be displayed with on a high definition digital display and accompanied by a QR code to allow viewers to purchase art on-site.
+                        <p>Each piece will be displayed with on a high definition digital display and 
+                            accompanied by a QR code to allow viewers to purchase art on-site.
                             
                         </p>
 
