--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                         <p> Applications are accepted on a rolling basis.
                             The pop-up gallery will open for one weekend in early May.
                             All digital materials must be prepared by the artists themselves.
+                            A wall-space fee is required for all artists participating in the show - see application form for details.
                           </p>
                         <!--- <ul class="social">
                             <li><a href="https://fb.com/templatemo"><i class="fa fa-facebook"></i></a></li>
