--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                             <h2>01</h2>
                             <img src="assets/images/features-icon-3.png" alt="">
                             <h4>NFTs IRL</h4>
-                            <p>Bringing the digital back into the physical world, this gallery event is an opportunity to reflect on the transiency of media. 
-                                Every collection participating in the show will gain a unique story to the pieces.
+                            <p>At the liminal space of digital and physical, this gallery event is an opportunity to reflect on the transiency of media. 
+                                
                             </p>
 
                         </div>
@@ -146,7 +146,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
-                    <div class="center-heading">
+                    <div class="center-heading" style="
+                    background: white;
+                    opacity: 90%;
+                ">
                         <h2>Curatorial <em>Team</em></h2>
                     </div>
                 </div>
