--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 
     <link rel="stylesheet" href="assets/css/owl-carousel.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RD12556E85"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RD12556E85');
+    </script>
+
 </head>
 
 <body>
