--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                             The pop-up gallery will open for one weekend in early May - free admission.
                             All digital materials must be prepared by the artists themselves.
                             A wall-space fee is required for all artists participating in the show - see application
-                            form for details.
+                            form for details. This fee will help pay for the space and show setup.
                         </p>
                         <!--- <ul class="social">
                             <li><a href="https://fb.com/templatemo"><i class="fa fa-facebook"></i></a></li>
