--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
                             All digital materials must be prepared by the artists themselves.
                             A wall-space fee is required for all artists participating in the show - see application
                             form for details. This fee will help pay for the space and show setup.
+                            No commision is taken from any sales of NFTs.
                         </p>
                         <!--- <ul class="social">
                             <li><a href="https://fb.com/templatemo"><i class="fa fa-facebook"></i></a></li>
